file(GLOB_RECURSE MNN_EXPR_SRCS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
option(MNN_EXPR_ENABLE_PROFILER "Support profile Expr's op cost" OFF)
IF (MNN_EXPR_ENABLE_PROFILER)
    add_definitions(-DMNN_EXPR_ENABLE_PROFILER)
ENDIF()
IF(MNN_SEP_BUILD)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "../")
    add_library(MNN_Express SHARED ${MNN_EXPR_SRCS})
    target_link_libraries(MNN_Express MNN)
ELSE()
    add_library(MNNExpress OBJECT ${MNN_EXPR_SRCS})
ENDIF()
